Jun 19, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * macosx/PcsxController.m: Do not simulate CD case open if user clicked
   Cancel in switch ISO dialog.

Jun 16, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/psxcommon.c: Do not allow hotkeys inside a softcall from HLE
   BIOS.
 * configure.ac: Removed -fno-dse, which is no longer necessary.

Jun 9, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * win32/pcsx.rc: Embed manifest properly under MSVC6.

Jun 8, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfcdrom/cdr-linux.c: Implemented CDRgetTE() and CDRreadCDDA() (not
   tested).
 * plugins/dfcdrom/cdr-null.c: Added CDRgetBufferSub().
 * libpcsxcore/plugins.c: CDRgetBufferSub() is now mandatory (again) :)

Jun 7, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/cdrom.c: Use boolean/TRUE/FALSE for where it should, don't use
   "long" type for cdrStruct which is to be saved in savestates.
 * libpcsxcore/cdrom.h: Likewise.
 * libpcsxcore/misc.c: Bumped savestate version.
 * libpcsxcore/plugins.c: Added support for CDRreadCDDA()/CDRgetTE() (not used
   for now).
 * libpcsxcore/plugins.h: Likewise.

Jun 6, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/sio.c: Fixed: 'y' and 'z' not converted to half-width.

Jun 4, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * gui/Plugin.c: Hack-fixed the bug which causes crash when loading state
   with dynarec CPU core. A large amount of refactor is needed for a proper
   fix.
 * win32/gui/WndMain.c: Changed language code corresponding to the ones in
   source tree.
 * libpcsxcore/psxmem.c: Minor comment fix.

Jun 3, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/cheat.c: Fixed endianness issue (not tested).
 * libpcsxcore/cdrom.c: Changed CDR interrupt timing value so that it behaves
   the same as old revisions. Not sure if it breaks or unbreaks anything.
 * libpcsxcore/psxbios.c: Silenced some GCC warnings.
 * libpcsxcore/psxcounters.c: Likewise.